--- a/src/onthespot/resources/web/plex_playlists.html
+++ b/src/onthespot/resources/web/plex_playlists.html
@@ -188,8 +188,10 @@
         <ul>
             <li><a href="/search">Search</a></li>
             <li><a href="/download_queue">Downloads</a></li>
-            <li><a href="/settings">Settings</a></li>
+            <li><a class="active" href="/plex_playlists">Plex playlist imports</a></li>
+            {% if user and user.is_admin %}<li><a href="/settings">Settings</a></li>{% endif %}
             <li><a href="/about">About</a></li>
+            <li style="float: right;"><a href="/api/logout" style="color: #e74c3c;">Logout</a></li>
         </ul>
     </div>
 
@@ -208,12 +210,7 @@
             </div>
         </div>
 
-        <div class="status-bar">
-            <p><strong>Plex Server:</strong> {{ config.plex_server_url or 'Not configured' }}</p>
-            <p><strong>Library:</strong> {% if config.plex_library_section_id %}Library {{ config.plex_library_section_id }}{% else %}Not selected{% endif %}</p>
-            <p><strong>M3U Directory:</strong> {{ m3u_directory }}</p>
-            <p><strong>Playlists Found:</strong> {{ playlists|length }}</p>
-        </div>
+
 
         {% if playlists|length > 0 %}
         <div class="playlists-grid" id="playlists-grid">
