--- a/src/onthespot/resources/web/download_queue.html
+++ b/src/onthespot/resources/web/download_queue.html
@@ -290,7 +290,7 @@
             left: 0;
             top: 0;
             bottom: 0;
-            background: linear-gradient(90deg, var(--accent) 0%, #66bb6a 100%);
+            background: linear-gradient(90deg, #1e3a8a 0%, rgba(59, 130, 246, 0.6) 100%);
             border-radius: 20px;
             transition: width 0.3s ease-out;
             z-index: -1;
